# TCD1304_CCD_480MHz_FINAL

./: .cproject  .gitignore  .mxproject  .project  README.md  SIGNAL_INVERSION_README.md  STM32H743VITX_FLASH.ld  STM32H743VITX_RAM.ld  TCD1304_CCD_480MHz_FINAL.ioc
Core/Inc/: main.h  (+4 more)
ccd_monitor/: README.md  analyze_flicker.py  ccd_features.csv  ccd_preprocess.py  chemometrics_pls.py  evaporation_model.py  gradient_boost.py  main.py  paper.txt  pipeline_output.txt  pyproject.toml  rand_forest.py  read_pdf.py  result.txt  settings.json  spectra_data.npz  verify_metadata.py
ccd_monitor/projects/Default/: rec_20260202_014906.npz  rec_20260202_085340.npz  rec_20260203_102848.npz  rec_20260203_102903.npz  rec_20260203_103021.npz  rec_20260203_103451.npz  rec_20260210_202608.npz  rec_20260210_205429.npz  rec_20260210_210630.npz  rec_20260210_210657.npz
ccd_monitor/projects/blue-211/: background-1000.npz  background-1200.npz  background-1500.npz  background-3000.npz  background-5000.npz  rec_20260211_140422.npz  rec_20260211_140636.npz  rec_20260211_140839.npz  rec_20260211_141022.npz  rec_20260211_141234.npz  rec_20260211_141625.npz  rec_20260211_143914.npz  rec_20260211_144106.npz  rec_20260211_144356.npz  rec_20260211_144602.npz  rec_20260211_144748.npz  rec_20260211_145009.npz  rec_20260211_145411.npz  rec_20260211_145614.npz  rec_20260211_145813.npz  rec_20260211_150021.npz  rec_20260211_150231.npz  rec_20260211_150403.npz  rec_20260211_150609.npz  rec_20260211_150829.npz  rec_20260211_150937.npz  rec_20260211_151108.npz  rec_20260211_151241.npz  rec_20260211_151350.npz  (+23 more)
(+86 files in other folders)
