[project]
name = "ccd-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyserial>=3.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
]
